--- a/tj-promotion/pom.xml
+++ b/tj-promotion/pom.xml
@@ -83,6 +83,11 @@
             <version>2.0.6</version>
             <scope>compile</scope>
         </dependency>
+        <!--aspecj-->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
